--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -8,29 +8,40 @@
       <ul class="nav navbar-nav">
         <li class="nav-item"><a href="#" class="nav-link" routerLink="home">Home</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="profile" routerLinkActive="active"
-                                *ngIf="this.authService.isLoggedIn()">Profile</a></li>
+            *ngIf="this.authService.isLoggedIn()">Profile</a></li>
         <li class="nav-item"><a class="nav-link" style="float:right" routerLink="login" routerLinkActive="active"
-                                *ngIf="!this.authService.isLoggedIn()">Login</a></li>
-        <li class="nav-item" *ngIf="this.authService.isLoggedIn()" ><a class="nav-link" (click)="logout()" href="#" >Logout</a>
+            *ngIf="!this.authService.isLoggedIn()">Login</a></li>
+        <li class="nav-item" *ngIf="this.authService.isLoggedIn()"><a class="nav-link" (click)="logout()"
+            href="#">Logout</a>
+        </li>
+        <li id="searchBar" class="nav-item">
+          <div class="search-container">
+            <div class="search-icon-btn">
+              <i class="glyphicon glyphicon-search"></i>
+            </div>
+            <div class="search-input">
+              <input type="search" class="search-bar" placeholder="Search...">
+            </div>
+          </div>
         </li>
       </ul>
       <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
         <li class="nav-item order-2 order-md-1"><a href="#" class="nav-link" title="settings"><i
-          class="fa fa-cog fa-fw fa-lg"></i></a></li>
+              class="fa fa-cog fa-fw fa-lg"></i></a></li>
         <li class="dropdown order-1" *ngIf="!this.authService.isLoggedIn()">
           <button type="button" id="dropdownMenu1" data-toggle="dropdown"
-                  class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
+            class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
           <ul class="dropdown-menu dropdown-menu-right mt-2">
             <li class="px-3 py-2">
               <div class="form-group">
                 <label for="email">Email</label>
                 <input id="email" type="email" placeholder="Email" [(ngModel)]="email"
-                       class="form-control form-control-sm" required="">
+                  class="form-control form-control-sm" required="">
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
                 <input id="password" type="password" placeholder="password" [(ngModel)]="password"
-                       class="form-control form-control-sm" required=""/>
+                  class="form-control form-control-sm" required="" />
               </div>
               <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-block" (click)="Login()">Login</button>
@@ -47,7 +58,7 @@
 </nav>
 
 <div id="modalPassword" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-     aria-hidden="true">
+  aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
