--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
         <li id="searchBar" class="nav-item">
           <div class="search-container">
             <div class="search-icon-btn">
-              <i class="glyphicon glyphicon-search"></i>
+              <i class="fa fa-search"></i>
             </div>
             <div class="search-input">
               <input type="search" class="search-bar" placeholder="Search...">
