--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -5,25 +5,15 @@
     
     <div class="collapse navbar-collapse" id="exCollapsingNavbar">
       <ul class="nav navbar-nav">
-<<<<<<< HEAD
         <li class="nav-item"><a href="#" class="nav-link" routerLink="/home" *ngIf="this.authService.isLoggedIn()">Home</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="films" routerLinkActive="active" *ngIf="this.authService.isLoggedIn()">Films</a></li>
         <li class="nav-item"><a class="nav-link" style="float:right" routerLink="tv-series" routerLinkActive="active" *ngIf="this.authService.isLoggedIn()">TV-Series</a></li>
-=======
-        <li class="nav-item"><a href="#" class="nav-link" routerLink="home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="profile" routerLinkActive="active"
-                                *ngIf="this.authService.isLoggedIn()">Profile</a></li>
-        <li class="nav-item"><a class="nav-link" style="float:right" routerLink="login" routerLinkActive="active"
-                                *ngIf="!this.authService.isLoggedIn()">Login</a></li>
-        <li class="nav-item" *ngIf="this.authService.isLoggedIn()" ><a class="nav-link" (click)="logout()" href="#" >Logout</a>
-        </li>
->>>>>>> remotes/origin/develop
       </ul>
 
       <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
         <!-- Logged in -->
         <li class="dropdown order-1" *ngIf="this.authService.isLoggedIn()">
-          <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">Name <span class="caret"></span></button>
+          <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">{{ user?.Name }} <span class="caret"></span></button>
           <ul class="dropdown-menu dropdown-menu-right mt-2" id="name">
             <li class="px-3">
               <div class="form-group">
