--- a/mydrtv/src/app/navbar/navbar.component.scss
+++ b/mydrtv/src/app/navbar/navbar.component.scss
@@ -17,16 +17,16 @@ $main: #32b859;
     -webkit-transform: perspective(1px) translateZ(0);
     transform: perspective(1px) translateZ(0);
     box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: transform;
-    transition-property: transform;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
 }
 
 .navbar-brand:hover {
     color: $main;
-    -webkit-transform: translateX(-8px);
-    transform: translateX(-8px);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+    transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
 }
 
 .navbar-brand:visited {
