--- a/mydrtv/src/app/navbar/navbar.component.scss
+++ b/mydrtv/src/app/navbar/navbar.component.scss
@@ -4,7 +4,7 @@ $lightWhite: #dedede;
 $main: #32b859;
 
 .navbar {
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgba(0,0,0,0.1)!important;
     height: 80px;
 }
 
