--- a/mydrtv/src/app/signup/signup.component.html
+++ b/mydrtv/src/app/signup/signup.component.html
@@ -3,7 +3,7 @@
 
       <input placeholder="Name" type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
         <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-          <div *ngIf="f.name.errors.required">First Name is required</div>
+          <div *ngIf="f.name.errors.required">Name is required</div>
         </div>
 
 
