--- a/mydrtv/src/app/search/search.component.scss
+++ b/mydrtv/src/app/search/search.component.scss
@@ -1,5 +1,42 @@
+/*
+Colors
+*/
+$blueGray: #263238;
+$lightWhite: #dedede;
+$main: #32b859;
+
 .filmImg{
-    height: 300px;
-    width: auto;
-    margin: 10px;
+    min-height: 360px;
+    max-height: 360px;
+    min-width: 250px;
+    max-width: 250px;
+    object-fit: cover;
+    margin: 4px;
+    margin-bottom: 30px;
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
 }
+  
+.filmImg:hover, .filmImg:focus, .filmImg:active {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  input {
+    position: relative;
+    width: 50%;
+    background-color: transparent!important;
+    color: $lightWhite!important;
+    padding: 10px;
+    outline: none;
+    border: 1px solid $lightWhite;
+    border-radius: .25rem;
+    margin-bottom: 60px;  
+  }
