--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -8,6 +8,7 @@
         <li class="nav-item"><a href="#" class="nav-link" routerLink="/home" *ngIf="this.authService.isLoggedIn()">Home</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="films" routerLinkActive="active" *ngIf="this.authService.isLoggedIn()">Films</a></li>
         <li class="nav-item"><a class="nav-link" style="float:right" routerLink="tv-series" routerLinkActive="active" *ngIf="this.authService.isLoggedIn()">TV-Series</a></li>
+        <li class="nav-item"><a class="nav-link" style="float:right" routerLink="members" routerLinkActive="active" *ngIf="this.authService.isLoggedIn()">Members</a></li>
         <li class="nav-item"><a class="nav-link" style="float:right" routerLink="search" routerLinkActive="active" *ngIf="this.authService.isLoggedIn()" ><img class="searchIcon" src="../../assets/search.png"></a></li>
       </ul>
 
