--- a/mydrtv/src/app/members/members.component.html
+++ b/mydrtv/src/app/members/members.component.html
@@ -1,3 +1,22 @@
-<p>
-  members works!
-</p>
+<div class="container">
+
+<div class="row">
+  <div *ngFor="let user of users">
+    <a id="{{user._id}}">
+      <div class="row user">
+        <div class="col-3">
+          <div *ngIf="user.Gender == 'M'"><img src="../../assets/default-man.jpg"></div>
+          <div *ngIf="user.Gender == 'F'"><img src="../../assets/default-woman.jpg"></div>
+        </div>
+        <div class="col-9">
+          <div id="name">{{user.Name}}</div>
+          <div>{{user.Email}}</div>
+          <div *ngIf="user.Gender == 'M'" class="gender"><div>Male</div></div>
+          <div *ngIf="user.Gender == 'F'" class="gender"><div>Female</div></div>
+        </div>
+      </div>
+    </a>
+  </div>
+
+</div>
+</div>
