--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
                   <a class="nav-link" routerLink="profile" routerLinkActive="active" *ngIf="this.authService.isLoggedIn()">Profile</a>
               </div>
               <div class="form-group">
-                  <a class="nav-link" (click)="logout()" href="#" >Log out</a>
+                  <a class="nav-link" (click)="logout()">Log out</a>
               </div>
             </li>
           </ul>
